# TinDox

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cli/src/tdpservice/: CMakeLists.txt  connection.cpp  connection.h  connectionerror.h  responseanalyzer.cpp  responseanalyzer.h  tdpservice.cpp  tdpservice.h
cli/src/tui/: CMakeLists.txt  modaldecisionwin.cpp  modaldecisionwin.h  modalinputwin.cpp  modalinputwin.h  modalwarningwin.cpp  modalwarningwin.h  modalwarningwindow.cpp  modalwarningwindow.h  modalwindow.cpp  modalwindow.h  return_exception.h  tui.cpp  tui.h
server/: .clang-format  .gitignore  CMakeLists.txt  README.md
server/cmake/: FindCatch2.cmake  ServerTesting.cmake  checks.cmake  config.hpp.in  install.cmake  installing.cmake  integration_tests.cmake  testing.cmake  unit_tests.cmake
server/include/: hello.hpp
server/include/tds/cli/: cli_error.hpp  command.hpp  command_base.hpp  command_executor.hpp  command_interface.hpp  command_runner.hpp  config_command.hpp  help_command.hpp  init_command.hpp  invalid_command_arguments_error.hpp  invalid_command_execution_error.hpp  log_command.hpp  no_such_command_error.hpp  run_command.hpp  user_command.hpp  version_command.hpp
server/include/tds/command/: command.hpp  command_executor.hpp  no_such_command_error.hpp
server/include/tds/config/: config_reader.hpp  defaults.hpp  limits.hpp  server_config.hpp
server/include/tds/ip/: address_v4.hpp  endpoint_v4.hpp  ip_error.hpp  port.hpp  socket_type.hpp  tcp_listener.hpp  tcp_socket.hpp
server/include/tds/linux/: echoless_terminal_guard.hpp  epoll.hpp  epoll_buffer.hpp  epoll_device.hpp  epoll_event.hpp  event_type.hpp  fd_buf.hpp  file_device.hpp  hash.hpp  io_device.hpp  linux_error.hpp  pipe_device.hpp  signal_device.hpp  streambuf.hpp  terminal.hpp  transfer_bytes.hpp
server/include/tds/protocol/: auth_token.hpp  client_context.hpp  code.hpp  codes.hpp  default_command_executor.hpp  download_manager.hpp  download_token.hpp  field.hpp  field_value.hpp  input_interpreter.hpp  input_interpreter_mode.hpp  interpreter.hpp  interpreter_mode.hpp  path_lock.hpp  protocol_code.hpp  protocol_error.hpp  protocol_interpreter.hpp  protocol_mode.hpp  receiver.hpp  request.hpp  response.hpp  response_builder.hpp  sender.hpp  server_context.hpp  upload_manager.hpp  upload_token.hpp
server/include/tds/server/: Service.hpp  client.hpp  client_context.hpp  client_pool.hpp  client_service.hpp  client_service_supervisor.hpp  connection_service.hpp  connection_service_supervisor.hpp  job.hpp  job_pool.hpp  server.hpp  server_context.hpp  server_logger.hpp  user_connection.hpp  user_context.hpp
server/include/tds/tcp/: listener.hpp
server/include/tds/user/: permissions.hpp  user_record_data.hpp  user_table.hpp  user_table_error.hpp
server/src/: hello.cpp  main.cpp
server/src/cli/: command_base.cpp  config_command.cpp  help_command.cpp  init_command.cpp  invalid_command_arguments_error.cpp  log_command.cpp  no_such_command_error.cpp  run_command.cpp  user_command.cpp  version_command.cpp
server/src/cli/user_commands/: input.cpp  user_add_command.cpp  user_passwd_command.cpp  user_perms_command.cpp  user_remove_command.cpp  user_subcommand_base.cpp
server/src/config/: config_reader.cpp  defaults.cpp  server_config.cpp
server/src/ip/: address_v4.cpp  endpoint_v4.cpp  ip_error.cpp  port.cpp  tcp_listener.cpp  tcp_socket.cpp
server/src/linux/: echoless_terminal_guard.cpp  epoll.cpp  epoll_buffer.cpp  epoll_device.cpp  file_device.cpp  hash.cpp  io_device.cpp  linux_error.cpp  pipe_device.cpp  signal_device.cpp  terminal.cpp  transfer_bytes.cpp
server/src/protocol/: auth_token.cpp  client_context.cpp  code.cpp  download_manager.cpp  download_token.cpp  field.cpp  path_lock.cpp  protocol_error.cpp  protocol_interpreter.cpp  receiver.cpp  request.cpp  response.cpp  response_builder.cpp  sender.cpp  server_context.cpp  upload_manager.cpp  upload_token.cpp
server/src/protocol/execution/: auth.cpp  cd.cpp  command_base.cpp  cp.cpp  dl.cpp  dls.cpp  exit.cpp  logout.cpp  ls.cpp  mkdir.cpp  mv.cpp  name.cpp  path_based_command.cpp  perms.cpp  pwd.cpp  rename.cpp  rm.cpp  transport_command.cpp  tree.cpp  ul.cpp
server/src/server/: client.cpp  client_context.cpp  client_pool.cpp  client_service.cpp  client_service_supervisor.cpp  connection_service.cpp  server.cpp  server_context.cpp  server_logger.cpp  user_connection.cpp
server/src/tcp/: listener.cpp
server/src/user/: permissions.cpp  user_record_data.cpp  user_table.cpp
server/tests/integration/: help.bash  init.bash  run.bash  user.bash
server/tests/integration/cli_tests/: help.sh  init.sh  run.sh  user.sh  version.sh
server/tests/integration/request_tests/: auth.sh  cd.sh  rename.sh  rm.sh
server/tests/unit/: dummy.cpp  dummy2.cpp  unit.hpp
server/tests/unit/cli/: cli_error_test.cpp  command_executor_test.cpp  command_interface_test.cpp  command_runner_test.cpp  command_test.cpp  config_command_test.cpp  help_command_test.cpp  init_command_test.cpp  invalid_command_arguments_error_test.cpp  log_command_test.cpp  no_such_command_error_test.cpp  run_command_test.cpp  user_command_test.cpp  version_command_test.cpp
server/tests/unit/command/: command_executor_test.cpp  command_test.cpp
server/tests/unit/config/: defaults_test.cpp  server_config_test.cpp
server/tests/unit/ip/: address_v4_test.cpp  endpoint_v4_test.cpp  ip_error_test.cpp  port_test.cpp  socket_type_test.cpp  tcp_listener_test.cpp
server/tests/unit/linux/: epoll_buffer_test.cpp  epoll_device_test.cpp  epoll_test.cpp  event_type_test.cpp  file_device_test.cpp  hash_test.cpp  io_device_test.cpp  linux_error_test.cpp  pipe_device_test.cpp  signal_device_test.cpp  transfer_bytes_test.cpp
server/tests/unit/protocol/: auth_token_test.cpp  download_token_test.cpp  field_test.cpp  path_lock_test.cpp  protocol_code_test.cpp  protocol_interpreter_test.cpp  receiver_test.cpp  request_test.cpp  response_builder_test.cpp  response_test.cpp  sender_test.cpp  (+1 more)
server/tools/: fmt
(+65 files in other folders)
